final but ithout .htaccess

--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -43,10 +43,10 @@
         <p class="lead light" th:text="${book.showGenres()}"></p>
         <p class="text-left">Price ($)</p>
         <p class="lead light" th:text="${book.price}"></p>
-        </br>
-        </br>
-        </br>
-        <button class="btn btn-outline-primary" type="button" value="" data-toggle="modal"
+        <br/>
+        <br/>
+        <br/>
+        <button class="btn btn-primary btn-lg btn-block" type="button" value="Submit" data-toggle="modal"
                 data-target="#orderModal">Order now
         </button>
     </div>
@@ -56,7 +56,6 @@
 <br/><br/><br/>
 
 <div class="myForm">
-
     <form action="#" th:action="@{/add_order(id=${book.id})}" th:method="post"
           class="needs-validation">
         <div class="modal fade" id="orderModal" tabindex="-1" role="dialog" aria-labelledby="orderModalLabel"
@@ -100,5 +99,17 @@
         </div>
     </form>
 </div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 </html>
