--- a/src/main/resources/templates/edit_book.html
+++ b/src/main/resources/templates/edit_book.html
@@ -146,7 +146,7 @@
                                             <td>
                                                 <select id="mainSelector" name="genre"
                                                         class="form-control browser-default custom-select">
-                                                    <option selected value> -- add new genre --</option>
+                                                    <option selected value disabled> -- add new genre --</option>
                                                     <option id="genre"
                                                             value=""
                                                             th:each="genre:${allGenres}"
