--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -23,10 +23,7 @@
     <div class="collapse navbar-collapse" id="navbarsExample05">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Book list<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="/orders">Order history<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/user">Book list<span class="sr-only">(current)</span></a>
             </li>
         </ul>
     </div>
@@ -87,7 +84,7 @@
                         </div>
                         <div class="form-group">
                             <label for="quantity" class="col-form-label">Quantity:</label>
-                            <input type="number" class="form-control" id="quantity" name="quantity" value=""/>
+                            <input type="number" min="0"class="form-control" id="quantity" name="quantity" value=""/>
                         </div>
                     </div>
                     <div class="modal-footer">
